# memorage

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  cc.yml  cd.yml  ci.yml
cert/: Cargo.toml
cert/src/: config.rs  verify.rs
client/: Cargo.toml
client/src/: config.rs  conn.rs  crypto.rs  error.rs  io.rs  lib.rs  main.rs  mnemonic.rs  net.rs
client/src/fs/: backup.rs  file.rs  hash.rs  index.rs  mod.rs  path.rs  root.rs
client/src/net/: client.rs  peer.rs
client/src/net/protocol/: error.rs  mod.rs  request.rs  response.rs
client/src/persistent/: config.rs  data.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs
crates/cert/: Cargo.toml
crates/cert/src/: verify.rs
crates/client/: Cargo.toml
crates/client-cli/: Cargo.toml
crates/client-cli/src/: app.rs  io.rs  main.rs
crates/client-cli/src/command/: backup.rs  check.rs  connect.rs  daemon.rs  login.rs  mod.rs  pair.rs  retrieve.rs  setup.rs  sync.rs
crates/client-gui/: Cargo.toml
crates/client-gui/src/: incoming.rs  main.rs
crates/client-gui/src/app/: initialised.rs  loading.rs  mod.rs  uninitialised.rs
crates/client-gui/src/subscription/: incoming.rs  mod.rs
crates/client/src/: crypto.rs  error.rs  lib.rs  mnemonic.rs  util.rs
crates/client/src/fs/: hash.rs  index.rs  mod.rs  path.rs  root.rs
crates/client/src/net/: client.rs  mod.rs  peer.rs
crates/client/src/net/peer/: incoming.rs  mod.rs  outgoing.rs  receieve.rs  retrieve.rs  send.rs  stream.rs
crates/client/src/net/protocol/: mod.rs  request.rs  response.rs  serde.rs
crates/client/src/persistent/: config.rs  data.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/cs/: Cargo.toml
crates/cs/src/: code.rs  error.rs  lib.rs  response.rs  serde.rs  time.rs
crates/macros/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: error.rs  lib.rs  main.rs
crates/server/src/manager/: mod.rs  pair.rs
crates/server/tests/: conn.rs
crates/stun/: Cargo.toml
crates/stun/src/: attribute.rs  message.rs
cs/: Cargo.toml
cs/src/: code.rs  error.rs  lib.rs  request.rs  response.rs
lib/: Cargo.toml
lib/benches/: key.rs
lib/src/: crypto.rs  error.rs  fs.rs  lib.rs  net.rs  verify.rs
lib/src/crypto/: function.rs  key.rs
lib/src/cs/: code.rs  error.rs  key.rs  mod.rs  protocol.rs
lib/src/cs/protocol/: error.rs  mod.rs  request.rs  response.rs
lib/src/fs/: backup.rs  file.rs  mod.rs  monitor.rs
lib/src/p2p/: error.rs  mod.rs
lib/src/p2p/crypto/: function.rs  key.rs  mod.rs
lib/src/p2p/fs/: backup.rs  file.rs  monitor.rs
lib/src/stun/: attribute.rs  message.rs
macros/: Cargo.toml
macros/src/: lib.rs
server/: Cargo.toml
server/src/: code_map.rs  collections.rs  connection_map.rs  hash_map.rs  lib.rs  main.rs  setup.rs  signing_bytes.rs  util.rs
server/src/handler/: check_connection.rs  get_key.rs  mod.rs  ping.rs  register.rs  request_connection.rs
server/src/manager/: code_map.rs  connection_map.rs  establish.rs  mod.rs  request.rs  signing_bytes.rs
server/tests/: code.rs  conn.rs  pair.rs  util.rs
soter-cert/: Cargo.toml
soter-cert/src/: attribute.rs  config.rs  error.rs  lib.rs  verifier.rs  verify.rs
soter-cert/src/stun/: attribute.rs  error.rs  message.rs  mod.rs
soter-cert/src/verify/: mod.rs  schema.rs
soter-client/: Cargo.toml
soter-client/src/: config.rs  conn.rs  crypto.rs  error.rs  lib.rs  main.rs  mnemonic.rs  net.rs
soter-client/src/crypto/: function.rs  key.rs  mnemonic.rs  mod.rs
soter-client/src/fs/: backup.rs  file.rs  mod.rs  monitor.rs
soter-core/: Cargo.toml
soter-core/src/: key_pair.rs  lib.rs  verify.rs
soter-core/src/crypto/: key_pair.rs  mod.rs  public_key.rs  signature.rs
soter-cs/: Cargo.toml
soter-cs/src/: bytes.rs  code.rs  error.rs  lib.rs  request.rs  response.rs  serde.rs
soter-macros/: Cargo.toml
soter-macros/src/: lib.rs
soter-server/: Cargo.toml
soter-server/src/: error.rs  hash_map.rs  lib.rs  main.rs  setup.rs  util.rs
soter-server/src/handler/: check_connection.rs  get_key.rs  mod.rs  ping.rs  register.rs  request_connection.rs
soter-server/src/manager/: code_map.rs  connection_map.rs  mod.rs  signing_bytes.rs
soter-server/tests/: code.rs  conn.rs  util.rs
soter-stun/: Cargo.toml
soter-stun/src/: attribute.rs  error.rs  lib.rs  message.rs
src/: crypto.rs  error.rs  fs.rs  lib.rs  main.rs  net.rs  stun.rs  test.rs
src/stun/: attribute.rs  message.rs  mod.rs
stun/: Cargo.toml
stun/src/: attribute.rs  lib.rs
temp/stun/: message.rs  mod.rs
