[package]
name = "oxalis"
version = "0.1.0"
authors = ["Ryan Lawton <ryan.a.lawton@gmail.com>", "Klim Tsoutsman <klimusha@gmail.com>"]
edition = "2018"
description = "A peer to peer backup service."
repository = "https://github.com/Ryan-Lawton-Prog/oxalis"
license = "MIT OR Apache-2.0"
keywords = ["p2p", "files", "sharing", "backup", "encryption"]

[dependencies]
thiserror = "1.0"
chacha20poly1305 = { version = "0.8", features = ["xchacha20poly1305"]}
rand_chacha = "0.3"

[dev-dependencies]
tempfile = "3"
