[package]
name = "memorage-client"
authors = ["Klim Tsoutsman <klimusha@gmail.com>"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/tsoutsman/memorage"
repository = "https://github.com/tsoutsman/memorage"

[dependencies]
memorage-core = { path = "../core" }
memorage-cs = { path = "../cs" }
memorage-cert = { path = "../cert" }
memorage-stun = { path = "../stun" }
memorage-macros = { path = "../macros", features = ["client"] }
tokio = { version = "*", features = ["net", "io-util", "time", "macros", "rt-multi-thread"] }
serde = "*"
blake3 = "*"
lazy_static = "*"
bincode = "*"
chacha20poly1305 = "*"
argon2 = "*"
thiserror = "*"
quinn = { git = "https://github.com/quinn-rs/quinn" }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
human-panic = "*"
notify = "5.0.0-pre.13"
clap = { version = "3.0.5", features = ["derive"] }
serde_bytes = "*"
toml = "*"
dirs = "*"

[dev-dependencies]
efes = "*"
tempfile = "*"
