[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
lib = { version = "*", path = "../lib" }
hashbrown = "*"
serde = "*"
bimap = "*"
tracing = "*"

[dev-dependencies]
lazy_static = "*"
rand = "0.7"
tracing-subscriber = "*"
log = "*"
