[package]
name = "memorage-server"
authors = ["Klim Tsoutsman <klimusha@gmail.com>"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/tsoutsman/memorage"
repository = "https://github.com/tsoutsman/memorage"

[dependencies]
memorage-core = { path = "../core" }
memorage-cs = { path = "../cs" }
memorage-cert = { path = "../cert" }
memorage-stun = { path = "../stun" }
tokio = { version = "*", features = ["sync",  "io-util", "net", "macros", "rt-multi-thread"] }
hashbrown = "*"
serde = "*"
bimap = "*"
quinn = { git = "https://github.com/quinn-rs/quinn" }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
human-panic = "*"
thiserror = "*"

[dev-dependencies]
lazy_static = "*"
