[package]
name = "soter-cert"
version = "0.1.0"
edition = "2021"

[dependencies]
soter-core = { path = "../soter-core" }
rand_chacha = "*"
rand = { version = "*", features = ["getrandom"] }
rcgen = "*"
rustls = { version = "*", features = ["dangerous_configuration"] }
thiserror = "*"
quinn = { git = "https://github.com/quinn-rs/quinn" }
x509-parser = { version = "*", features = ["verify", "validate"] }
