[package]
name = "soter-client"
version = "0.1.0"
edition = "2021"

[dependencies]
soter-core = { path = "../soter-core" }
soter-cs = { path = "../soter-cs" }
soter-cert = { path = "../soter-cert" }
tokio = { version = "*", features = ["net", "io-util", "time"] }
serde = "*"
blake3 = "*"
lazy_static = "*"
bincode = "*"
chacha20poly1305 = "*"
argon2 = "*"
rand_chacha = "*"

[dev-dependencies]
rand = "*"
efes = "*"
tempfile = "*"
