[package]
name = "soter-client"
authors = ["Klim Tsoutsman <klimusha@gmail.com>"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/tsoutsman/soter"
repository = "https://github.com/tsoutsman/soter"

[dependencies]
soter-core = { path = "../soter-core" }
soter-cs = { path = "../soter-cs" }
soter-cert = { path = "../soter-cert" }
soter-stun = { path = "../soter-stun" }
soter-macros = { path = "../soter-macros", features = ["client"] }
tokio = { version = "*", features = ["net", "io-util", "time", "macros", "rt-multi-thread"] }
serde = "*"
blake3 = "*"
lazy_static = "*"
bincode = "*"
chacha20poly1305 = "*"
argon2 = "*"
thiserror = "*"
quinn = { git = "https://github.com/quinn-rs/quinn" }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
human-panic = "*"
notify = "5.0.0-pre.13"

[dev-dependencies]
efes = "*"
tempfile = "*"
