[package]
name = "soter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
soter-core = { path = "../soter-core" }
soter-cs = { path = "../soter-cs" }
soter-stun = { path = "../soter-stun" }
tokio = { version = "*", features = ["sync",  "io-util", "net", "macros", "rt-multi-thread"] }
hashbrown = "*"
serde = "*"
bimap = "*"
quinn = { git = "https://github.com/quinn-rs/quinn" }
rcgen = "*"
rustls = "*"
# tracing = "*"

[dev-dependencies]
lazy_static = "*"
rand = "0.7"
