[package]
name = "soter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
soter-core = { path = "../soter-core" }
soter-cs = { path = "../soter-cs" }
soter-cert = { path = "../soter-cert" }
tokio = { version = "*", features = ["sync",  "io-util", "net", "macros", "rt-multi-thread"] }
hashbrown = "*"
serde = "*"
bimap = "*"
quinn = { git = "https://github.com/quinn-rs/quinn" }
tracing = "*"
tracing-subscriber = "*"

[dev-dependencies]
lazy_static = "*"
rand = "0.7"
