[package]
name = "soter-server"
authors = ["Klim Tsoutsman <klimusha@gmail.com>"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/tsoutsman/soter"
repository = "https://github.com/tsoutsman/soter"

[dependencies]
soter-core = { path = "../soter-core" }
soter-cs = { path = "../soter-cs" }
soter-cert = { path = "../soter-cert" }
soter-stun = { path = "../soter-stun" }
tokio = { version = "*", features = ["sync",  "io-util", "net", "macros", "rt-multi-thread"] }
hashbrown = "*"
serde = "*"
bimap = "*"
quinn = { git = "https://github.com/quinn-rs/quinn" }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
human-panic = "*"
thiserror = "*"

[dev-dependencies]
lazy_static = "*"
