[package]
name = "memorage-cert"
version = "0.1.0"
authors = ["Klim Tsoutsman <klim@memorage.org>"]
edition = "2021"
homepage = "https://memorage.org"
repository = "https://github.com/memorage/memorage"
license = "GPL-3.0-only"

[dependencies]
# internal
memorage-core = { path = "../core" }

# core
rcgen = "0.9"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
quinn = "0.8"
x509-parser = { version = "0.13", features = ["verify", "validate"] }

# util
thiserror = "1.0"
