cargo-features = ["different-binary-name"]

[package]
name = "memorage-client-cli"
version = "0.1.0"
authors = ["Klim Tsoutsman <klim@memorage.org>"]
edition = "2021"
homepage = "https://memorage.org"
repository = "https://github.com/memorage/memorage"
license = "GPL-3.0-only"

[[bin]]
name = "memorage-client-cli"
filename = "memorage"

[dependencies]
# internal
memorage-client = { path = "../client" }
memorage-cs = { path = "../cs" }
memorage-core = { path = "../core" }

# core
tracing = "0.1"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }

# cli
clap = { version = "3.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
human-panic = "1.0"
rpassword = "6.0"
