[package]
name = "memorage-client-gui"
version = "0.1.0"
authors = ["Klim Tsoutsman <klim@memorage.org>"]
edition = "2021"
homepage = "https://memorage.org"
repository = "https://github.com/memorage/memorage"
license = "GPL-3.0-only"

[dependencies]
# internal
memorage-core = { path = "../core" }
memorage-client = { path = "../client" }

# core
tokio = "1.19"

# gui
iced = { version = "0.4", features = ["tokio"] }
iced_native = "0.5"
