[package]
name = "memorage-client"
version = "0.1.0"
authors = ["Klim Tsoutsman <klim@memorage.org>"]
edition = "2021"
homepage = "https://memorage.org"
repository = "https://github.com/memorage/memorage"
license = "GPL-3.0-only"

[dependencies]
memorage-core = { path = "../core" }
memorage-cs = { path = "../cs" }
memorage-cert = { path = "../cert" }
memorage-stun = { path = "../stun" }
memorage-macros = { path = "../macros", features = ["client"] }
tokio = { version = "*", features = ["net", "io-util", "macros", "rt-multi-thread", "fs"] }
serde = "*"
blake3 = "*"
lazy_static = "*"
bincode = "*"
chacha20poly1305 = "0.9"
argon2 = "*"
thiserror = "*"
quinn = { git = "https://github.com/quinn-rs/quinn" }
tracing = "*"
serde_bytes = "*"
toml = "*"
dirs = "*"
walkdir = "*"
directories-next = "*"
jwalk = "*"
rayon = "*"
bimap = { version = "*", features = ["serde"] }
async-trait = "*"

[dev-dependencies]
efes = "*"
tempfile = "*"
