[package]
name = "memorage-core"
version = "0.1.0"
authors = ["Klim Tsoutsman <klim@memorage.org>"]
edition = "2021"
homepage = "https://memorage.org"
repository = "https://github.com/memorage/memorage"
license = "GPL-3.0-only"

[dependencies]
ed25519-dalek = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
time = { version = "*", features = ["serde"] }
rand = "0.7"
