[package]
name = "memorage-cs"
version = "0.1.0"
authors = ["Klim Tsoutsman <klim@memorage.org>"]
edition = "2021"
homepage = "https://memorage.org"
repository = "https://github.com/memorage/memorage"
license = "GPL-3.0-only"

[dependencies]
serde = { version = "*", features = ["derive"] }
memorage-core = { path = "../core" }
bincode = "*"
thiserror = "*"
