[package]
name = "memorage-cs"
version = "0.1.0"
authors = ["Klim Tsoutsman <klim@memorage.org>"]
edition = "2021"
homepage = "https://memorage.org"
repository = "https://github.com/memorage/memorage"
license = "GPL-3.0-only"

[dependencies]
# internal
memorage-core = { path = "../core" }

# core
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# util
thiserror = "1.0"
