[package]
name = "memorage-stun"
version = "0.1.0"
authors = ["Klim Tsoutsman <klim@memorage.org>"]
edition = "2021"
homepage = "https://memorage.org"
repository = "https://github.com/memorage/memorage"
license = "GPL-3.0-only"

[dependencies]
# internal 
memorage-core = { path = "../core" }

# core
tokio = { version = "1.18", features = ["net"] }

# util
enumn = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
